[package]
name = "rpc_sub"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-client = "2.2.7"
solana-sdk = "2.2.2"
solana-program = "2.2.1" # For Pubkey and other common types

anchor-lang = { version = "0.31.1"} # For InitSpace if needed, or just for consistency if sharing code, but primarily for borsh.
tokio = { version = "1", features = ["full"] }
borsh = { version = "0.10.3", features = ["rc"] } # Added to match anchor-lang's dependency

bs58 = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
thiserror = "2.0.12"
solana-transaction-status = "2.2.7"
futures-util = "0.3.31"

[[bin]]
name = "agent_feed_indexer"
path = "src/main.rs" 
