[package]
name = "rpc_sub"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-lang = { version = "0.31.1"} # For InitSpace if needed, or just for consistency if sharing code, but primarily for borsh.
anchor-client = { version = "0.31.1", features = ["async"] } # Use a version compatible with your Anchor program

tokio = { version = "1", features = ["full"] }
borsh = { version = "0.10.3", features = ["rc"] } # Added to match anchor-lang's dependency

bs58 = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
thiserror = "2.0.12"
futures-util = "0.3.31"
solana-transaction-status = "2.2.7"

[[bin]]
name = "agent_feed_indexer"
path = "src/main.rs" 
